# CSC417-Project

./: .gitmodules  CMakeLists.txt  README.md
assets/: convert.py  geo.b  geo.xcf  title.b
assets/textures/: a.b  a.xcf  convert.py  noita.b  noita.xcf  oct.b  oct.xcf  s1.b  s1.xcf  spiral.b  spiral.xcf  title.afdesign  title.xcf
shader/: base.frag  rigid.frag  screen.frag
src/: Enum.hpp  Marching.hpp  Shader.cpp  Shader.hpp  Simulation.hpp  Types.hpp  UI.hpp  b2_user_settings.h  main.cpp
